@@ -39,7 +39,7 @@ Pick a RPM package for your Linux platform and install. On CentOS, RHEL or Fedor
 
 ``sudo rpm -i <filename>.rpm``
 
-While ``<filename>`` is the main file name of the RPM package you wish to install. You may want to use the debug builds (the last three packages mentioned above) if you desire to do some debugging work when running DOSBox-X. If there are missing dependencies for the rpm command, such as libpng and fluid-soundfont, then you will need to install them first.
+Where ``<filename>`` is the main file name of the RPM package you wish to install. You may want to use the debug builds (the last three packages in the above example) if you desire to do some debugging work when running DOSBox-X. If there are missing dependencies for the rpm command, such as libpng and fluid-soundfont, then you will need to install them first.
 
 Note: You may not see all such packages for some DOSBox-X versions. For example, there are no CentOS 8 builds for DOSBox-X version 0.83.4. Only CentOS 7 builds are available for this version, namely the following:
 
