@@ -1,6 +1,7 @@
 0.83.5
   - Worked around the mounting issue with LaunchBox,
-    allowing MOUNT C 'C:\DOS' for Windows. (Wengier)
+    by allowing a mounting command-line with single
+    quotes like MOUNT C 'X:\DOS' on Windows. (Wengier)
   - Updated xxHash library by Yann Collet from 0.7.4
     to the stable version 0.8.0. (Wengier)
   - Added "Quick launch program..." menu (under "DOS")
